version/0.17/_sources/api/general/_autosummary/ansys.fluent.core.workflow.CompoundTask.rst.txt
ansys.fluent.core.workflow.CompoundTask
=======================================

.. currentmodule:: ansys.fluent.core.workflow

.. autoclass:: CompoundTask

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~CompoundTask.__init__
      ~CompoundTask.add_child
      ~CompoundTask.add_child_and_update
      ~CompoundTask.child_task_python_names
      ~CompoundTask.compound_child
      ~CompoundTask.delete
      ~CompoundTask.get_direct_downstream_tasks
      ~CompoundTask.get_direct_upstream_tasks
      ~CompoundTask.get_id
      ~CompoundTask.get_idx
      ~CompoundTask.inactive_ordered_children
      ~CompoundTask.last_child
      ~CompoundTask.ordered_children
      ~CompoundTask.python_name
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~CompoundTask.CommandArguments
      ~CompoundTask.arguments
   
   