version/0.20/_sources/api/general/_autosummary/ansys.fluent.core.workflow.CompoundTask.rst.txt
ansys.fluent.core.workflow.CompoundTask
=======================================

.. currentmodule:: ansys.fluent.core.workflow

.. autoclass:: CompoundTask

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~CompoundTask.__init__
      ~CompoundTask.add_child_and_update
      ~CompoundTask.add_child_to_task
      ~CompoundTask.child_task_python_names
      ~CompoundTask.compound_child
      ~CompoundTask.delete
      ~CompoundTask.display_name
      ~CompoundTask.get_direct_downstream_tasks
      ~CompoundTask.get_direct_upstream_tasks
      ~CompoundTask.get_id
      ~CompoundTask.get_idx
      ~CompoundTask.get_next_possible_tasks
      ~CompoundTask.inactive_ordered_children
      ~CompoundTask.insert_compound_child_task
      ~CompoundTask.insert_next_task
      ~CompoundTask.last_child
      ~CompoundTask.ordered_children
      ~CompoundTask.python_name
      ~CompoundTask.rename
      ~CompoundTask.update_child_tasks
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~CompoundTask.arguments
      ~CompoundTask.command_arguments
   
   